--- a/src/app/avaliation/dobras/will/will.component.html
+++ b/src/app/avaliation/dobras/will/will.component.html
@@ -3,7 +3,7 @@
     <div class="section">
         <div class="section-content">
         <h1 class="h1-title" i18n>Williams - 4 dobras</h1>
-        <form #f="ngForm" (submit)="save(f.value)" autocomplete="off">
+        <form #f="ngForm" (keydown.enter)="$event.preventDefault()" (submit)="save(f.value)" autocomplete="off">
             <input type="hidden" name="altura" #altura="ngModel" [(ngModel)]="newEvaluation.altura">
             <input type="hidden" name="peso" #peso="ngModel" [(ngModel)]="newEvaluation.peso">
             <input type="hidden" name="punho" #punho="ngModel" [(ngModel)]="newEvaluation.punho">
@@ -40,7 +40,8 @@
                             <input name="triciptal" #triciptal="ngModel" [(ngModel)]="newEvaluation.triciptal" type="number" (focus)="$event.target.select()">
                         </td>
                         <td *ngIf="addEval">
-                            <input name="triciptal" #triciptal="ngModel" [(ngModel)]="newEvaluation.triciptal" type="number">
+                            <input name="triciptal" #triciptal="ngModel" [(ngModel)]="newEvaluation.triciptal" type="number"
+                            (change)="getSomatorio()" (focus)="$event.target.select()">
                         </td>
                     </tr>
                     <tr>
@@ -54,7 +55,8 @@
                             <input name="subescapular" #subescapular="ngModel" [(ngModel)]="newEvaluation.subescapular" type="number" (focus)="$event.target.select()">
                         </td>
                         <td *ngIf="addEval">
-                            <input name="subescapular" #subescapular="ngModel" [(ngModel)]="newEvaluation.subescapular" type="number">
+                            <input name="subescapular" #subescapular="ngModel" [(ngModel)]="newEvaluation.subescapular" type="number"
+                            (change)="getSomatorio()" (focus)="$event.target.select()">
                         </td>
                     </tr>
                     <tr>
@@ -68,7 +70,8 @@
                             <input name="abdominal" #abdominal="ngModel" [(ngModel)]="newEvaluation.abdominal" type="number" (focus)="$event.target.select()">
                         </td>
                         <td *ngIf="addEval">
-                            <input name="abdominal" #abdominal="ngModel" [(ngModel)]="newEvaluation.abdominal" type="number">
+                            <input name="abdominal" #abdominal="ngModel" [(ngModel)]="newEvaluation.abdominal" type="number"
+                            (change)="getSomatorio()" (focus)="$event.target.select()">
                         </td>
                     </tr>
                     <tr>
@@ -82,7 +85,8 @@
                             <input name="geminal" #geminal="ngModel" [(ngModel)]="newEvaluation.geminal" type="number" (focus)="$event.target.select()">
                         </td>
                         <td *ngIf="addEval">
-                            <input name="geminal" #geminal="ngModel" [(ngModel)]="newEvaluation.geminal" type="number">
+                            <input name="geminal" #geminal="ngModel" [(ngModel)]="newEvaluation.geminal" type="number"
+                            (change)="getSomatorio()" (focus)="$event.target.select()">
                         </td>
                     </tr>
                     <tr>
@@ -95,7 +99,7 @@
                             {{(+evaluation[pointer].triciptal + +evaluation[pointer].subescapular 
                            + +evaluation[pointer].abdominal + +evaluation[pointer].geminal) / 4 | number: '1.2-2': locale}}
                         </td>
-                        <td *ngIf="addEval">&nbsp;</td>
+                        <td *ngIf="addEval">{{ somatorio / 4 | number: '': locale }}</td>
                     </tr>
                     <tr>
                         <th i18n>Somatório</th>
@@ -107,7 +111,7 @@
                             {{+evaluation[pointer].triciptal + +evaluation[pointer].subescapular 
                            + +evaluation[pointer].abdominal + +evaluation[pointer].geminal | number: '1.2-2': locale}}
                         </td>
-                        <td *ngIf="addEval">&nbsp;</td>
+                        <td *ngIf="addEval">{{ somatorio | number: '': locale }}</td>
                     </tr>
                     <tr>
                         <td colspan="3">
@@ -137,17 +141,17 @@
                     <mat-icon class="mat-14">chevron_left</mat-icon>
                 </button>
                 <button type="button" *ngIf="!addEval" mat-stroked-button [disabled]="editAv" (click)="addEvaluation()">
-                    <mat-icon class="mat-18">add</mat-icon>
+                    <mat-icon class="mat-18" color="accent">add</mat-icon>
                 </button>
                 <button type="button" *ngIf="!addEval" [disabled]="pointer == maxPointer-1 || pointer == -1 || editAv"
                     mat-mini-fab color="default" (click)="pointer=pointer+1">
                     <mat-icon class="mat-14">chevron_right</mat-icon>
                 </button>
                 <button type="button" *ngIf="addEval" mat-stroked-button color="default" (click)="closeInput()">
-                    <mat-icon class="mat-18">close</mat-icon>
+                    <mat-icon class="mat-18" color="warn">close</mat-icon>
                 </button>
                 <button *ngIf="addEval" mat-stroked-button>
-                    <mat-icon class="mat-18">check</mat-icon>
+                    <mat-icon class="mat-18" color="accent">check</mat-icon>
                 </button>
             </div>
         </form>
