--- a/src/app/avaliation/flexibilidade/goniometro/goniometro.component.html
+++ b/src/app/avaliation/flexibilidade/goniometro/goniometro.component.html
@@ -170,7 +170,7 @@
                                 </td>
                             </tr>
                             <tr>
-                                <th><span (click)="openDialog('Cotovelo - Extensão')">Extensão
+                                <th><span (click)="openDialog('Cotovelo - Hiperextensão')">Hiperextensão
                                         <small>[145&deg;]</small></span></th>
                                 <td *ngIf="pointer>=1 && !addMesure && editPointer!=1">
                                     {{evaluation[pointer-1].cotoveloe}}&deg;</td>
