--- a/src/app/avaliation/CardioPulmunar/natacao/natacao.component.html
+++ b/src/app/avaliation/CardioPulmunar/natacao/natacao.component.html
@@ -2,7 +2,7 @@
     <app-header-name></app-header-name>
     <div class="section">
         <div class="section-content">
-            <h1 class="h1-title" i18n>Natação - nadar crawl na pescina - 12min</h1>
+            <h1 class="h1-title" i18n>Natação - nadar crawl na piscina - 12min</h1>
             <form #f="ngForm" (submit)="save(f.value)" autocomplete="off">
                 <input type="hidden" name="idade" #idade="ngModel" [ngModel]="newEvaluation.idade">
                 <input type="hidden" name="sexo" #sexo="ngModel" [ngModel]="newEvaluation.sexo">
