--- a/src/app/avaliation/antropometria/vogel/vogel.component.html
+++ b/src/app/avaliation/antropometria/vogel/vogel.component.html
@@ -7,6 +7,8 @@
                 <input type="hidden" name="altura" #altura="ngModel" [(ngModel)]="newEvaluation.altura">
                 <input type="hidden" name="peso" #peso="ngModel" [(ngModel)]="newEvaluation.peso">
                 <input type="hidden" name="idade" #idade="ngModel" [(ngModel)]="newEvaluation.idade">
+                <input type="hidden" name="punho" #punho="ngModel" [(ngModel)]="newEvaluation.punho">
+                <input type="hidden" name="joelho" #joelho="ngModel" [(ngModel)]="newEvaluation.joelho">
                 <table class="section-table">
                     <thead>
                         <tr>
@@ -124,6 +126,26 @@
                                     type="number">
                             </td>
                         </tr>
+                        <tr>
+                            <th><span (click)="openHelpDialog('Altura')">Altura <small>(m)</small></span></th>
+                            <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].altura | number: '': locale}}
+                            </td>
+                            <td *ngIf="pointer>=0">{{evaluation[pointer].altura | number: '': locale}}</td>
+                            <td *ngIf="addEval">{{newEvaluation.altura | number: '': locale}}</td>
+                        </tr>
+                        <tr>
+                            <th><span (click)="openHelpDialog('Peso corporal')">Peso corporal <small>(m)</small></span></th>
+                            <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].altura | number: '': locale}}
+                            </td>
+                            <td *ngIf="pointer>=0">{{evaluation[pointer].altura | number: '': locale}}</td>
+                            <td *ngIf="addEval">{{newEvaluation.altura | number: '': locale}}</td>
+                        </tr>
+                        <tr>
+                            <th>Idade</th>
+                            <td *ngIf="pointer>=1 && !addEval">{{evaluation[pointer-1].idade | number: '': locale}}</td>
+                            <td *ngIf="pointer>=0">{{evaluation[pointer].idade | number: '': locale}}</td>
+                            <td *ngIf="addEval">{{newEvaluation.idade | number: '': locale}}</td>
+                        </tr>
 
                         <tr>
                             <th>Ações</th>
@@ -153,17 +175,17 @@
                         <mat-icon class="mat-14">chevron_left</mat-icon>
                     </button>
                     <button type="button" *ngIf="!addEval" mat-stroked-button (click)="addEvaluation()">
-                        <mat-icon class="mat-18">add</mat-icon>
+                        <mat-icon class="mat-18" color="accent">add</mat-icon>
                     </button>
                     <button type="button" *ngIf="!addEval" [disabled]="pointer == maxPointer-1 || pointer == -1"
                         mat-mini-fab color="default" (click)="pointer=pointer+1">
                         <mat-icon class="mat-14">chevron_right</mat-icon>
                     </button>
                     <button type="button" *ngIf="addEval" mat-stroked-button color="default" (click)="closeInput()">
-                        <mat-icon class="mat-18">close</mat-icon>
+                        <mat-icon class="mat-18" color="warn">close</mat-icon>
                     </button>
                     <button *ngIf="addEval" mat-stroked-button>
-                        <mat-icon class="mat-18">check</mat-icon>
+                        <mat-icon class="mat-18" color="accent">check</mat-icon>
                     </button>
                 </div>
             </form>
