--- a/src/app/avaliation/dobras/faulkner4/faulkner4.component.html
+++ b/src/app/avaliation/dobras/faulkner4/faulkner4.component.html
@@ -3,7 +3,7 @@
     <div class="section">
         <div class="section-content">
             <h1 class="h1-title" i18n>Faulkner - 4 Dobras</h1>
-            <form #f="ngForm" (submit)="save(f.value)" autocomplete="off">
+            <form #f="ngForm" (keydown.enter)="$event.preventDefault()" (submit)="save(f.value)" autocomplete="off">
                 <input type="hidden" name="altura" #altura="ngModel" [(ngModel)]="newEvaluation.altura">
                 <input type="hidden" name="peso" #peso="ngModel" [(ngModel)]="newEvaluation.peso">
                 <input type="hidden" name="punho" #punho="ngModel" [(ngModel)]="newEvaluation.punho">
@@ -47,7 +47,7 @@
                             </td>
                             <td *ngIf="addEval">
                                 <input name="triciptal" #triciptal="ngModel" [(ngModel)]="newEvaluation.triciptal"
-                                    type="number">
+                                    type="number" (change)="getSomatorio()" (focus)="$event.target.select()" id="focusMe">
                             </td>
                         </tr>
                         <tr>
@@ -68,7 +68,8 @@
                             </td>
                             <td *ngIf="addEval">
                                 <input name="subescapular" #subescapular="ngModel"
-                                    [(ngModel)]="newEvaluation.subescapular" type="number">
+                                    [(ngModel)]="newEvaluation.subescapular" type="number" 
+                                    (change)="getSomatorio()" (focus)="$event.target.select()">
                             </td>
                         </tr>
                         <tr>
@@ -87,7 +88,7 @@
                             </td>
                             <td *ngIf="addEval">
                                 <input name="suprailiaca" #suprailiaca="ngModel" [(ngModel)]="newEvaluation.suprailiaca"
-                                    type="number">
+                                    type="number" (change)="getSomatorio()" (focus)="$event.target.select()">
                             </td>
                         </tr>
                         <tr>
@@ -107,7 +108,7 @@
                             </td>
                             <td *ngIf="addEval">
                                 <input name="abdominal" #abdominal="ngModel" [(ngModel)]="newEvaluation.abdominal"
-                                    type="number">
+                                    type="number" (change)="getSomatorio()" (focus)="$event.target.select()">
                             </td>
                         </tr>
                         <tr *ngIf="sex == 'M'">
@@ -119,6 +120,7 @@
                                     <mat-label>Tipo Aluno</mat-label>
                                     <mat-select name="tipoaluno" #tipoaluno="ngModel"
                                         [(ngModel)]="newEvaluation.tipoaluno">
+                                        <mat-option></mat-option>
                                         <mat-option value="Nadadores">Nadadores</mat-option>
                                         <mat-option value="Futebolistas">Futebolistas</mat-option>
                                         <mat-option value="Outros esportes">Outros esportes</mat-option>
@@ -131,6 +133,7 @@
                                     <mat-label>Tipo Aluno</mat-label>
                                     <mat-select name="tipoaluno" #tipoaluno="ngModel"
                                         [(ngModel)]="newEvaluation.tipoaluno">
+                                        <mat-option></mat-option>
                                         <mat-option value="Nadadores">Nadadores</mat-option>
                                         <mat-option value="Futebolistas">Futebolistas</mat-option>
                                         <mat-option value="Outros esportes">Outros esportes</mat-option>
@@ -142,6 +145,7 @@
                                     <mat-label>Tipo Aluno</mat-label>
                                     <mat-select name="tipoaluno" #tipoaluno="ngModel"
                                         [(ngModel)]="newEvaluation.tipoaluno">
+                                        <mat-option></mat-option>
                                         <mat-option value="Nadadores">Nadadores</mat-option>
                                         <mat-option value="Futebolistas">Futebolistas</mat-option>
                                         <mat-option value="Outros esportes">Outros esportes</mat-option>
@@ -160,7 +164,7 @@
                                 {{(+evaluation[pointer].triciptal + +evaluation[pointer].subescapular
                          + +evaluation[pointer].abdominal + +evaluation[pointer].suprailiaca) / 4 | number: '1.2-2': locale }}
                             </td>
-                            <td *ngIf="addEval">&nbsp;</td>
+                            <td *ngIf="addEval">{{ somatorio / 4 | number: '': locale }}</td>
                         </tr>
                         <tr>
                             <th i18n>Somatório</th>
@@ -172,7 +176,7 @@
                                 {{+evaluation[pointer].triciptal + +evaluation[pointer].subescapular
                           + +evaluation[pointer].abdominal + +evaluation[pointer].suprailiaca | number: '1.2-2': locale }}
                             </td>
-                            <td *ngIf="addEval">&nbsp;</td>
+                            <td *ngIf="addEval">{{ somatorio | number: '': locale }}</td>
                         </tr>
                         <tr>
                             <td colspan="3">
@@ -203,7 +207,7 @@
                     </button>
                     <button type="button" *ngIf="!addEval" mat-stroked-button [disabled]="editAv"
                         (click)="addEvaluation()">
-                        <mat-icon class="mat-18">add</mat-icon>
+                        <mat-icon class="mat-18" color="accent">add</mat-icon>
                     </button>
                     <button type="button" *ngIf="!addEval"
                         [disabled]="pointer == maxPointer-1 || pointer == -1 || editAv" mat-mini-fab color="default"
@@ -211,10 +215,10 @@
                         <mat-icon class="mat-14">chevron_right</mat-icon>
                     </button>
                     <button type="button" *ngIf="addEval" mat-stroked-button color="default" (click)="closeInput()">
-                        <mat-icon class="mat-18">close</mat-icon>
+                        <mat-icon class="mat-18" color="warn">close</mat-icon>
                     </button>
                     <button *ngIf="addEval" mat-stroked-button>
-                        <mat-icon class="mat-18">check</mat-icon>
+                        <mat-icon class="mat-18" color="accent">check</mat-icon>
                     </button>
                 </div>
             </form>
