--- a/src/app/avaliation/dobras/faulkner4/faulkner4.component.scss
+++ b/src/app/avaliation/dobras/faulkner4/faulkner4.component.scss
@@ -40,6 +40,17 @@
     border-color: rgb(37, 36, 36);
     background-color: rgba(245, 245, 245, 0.555);
   }
+  .mat-form-field-appearance-legacy .mat-form-field-label {
+    color: rgb(250 250 250) !important;
+    font-size: medium !important;
+  }
+  .mat-select-arrow, .mat-select-value {
+    color: white !important;
+  }
+  .mat-select-value-text {
+    color: white !important;
+  }
+
 }
 
 @media only screen and (min-width: 768px) {
