--- a/src/app/dashboard/dash/dash.component.scss
+++ b/src/app/dashboard/dash/dash.component.scss
@@ -38,7 +38,7 @@
   }
 
   .mat-select-value-text {
-    color: whitesmoke !important;
+    color:  rgba(100, 100, 100, 0.1) !important;
     font-size: large;
     display: flex;
     justify-content: center;
@@ -46,7 +46,7 @@
   }
   .mat-select-arrow {
     color: whitesmoke !important;
-}
+  }
 
   .select-button {
     width: 22px;
