--- a/src/app/register/new/new.component.scss
+++ b/src/app/register/new/new.component.scss
@@ -13,6 +13,9 @@
     flex-direction: column;
     justify-content: flex-start;
     align-items: center;
+    &-content{
+        width: 100%;
+    }
 
     h1{
         margin-top: 20px;
@@ -106,7 +109,7 @@
 
 @media only screen and (min-width: 768px) {
 
-    .section{
+    .section-content{
         width: 425px;
     }
     .new-form{
